--- a/Oops-Android/app/src/main/res/layout/activity_login.xml
+++ b/Oops-Android/app/src/main/res/layout/activity_login.xml
@@ -222,6 +222,7 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:layout_marginEnd="18dp"
                 android:background="@color/Gray_50"
                 android:outlineSpotShadowColor="#1A000000"
@@ -320,7 +321,7 @@
             android:visibility="gone"
             android:gravity="end"
             android:layout_marginTop="5dp"
-            android:layout_marginEnd="-21dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginBottom="40dp"
             app:layout_constraintTop_toBottomOf="@id/lLayout_login_social"
             app:layout_constraintEnd_toEndOf="@id/barrier_login_naver">
