--- a/Oops-Android/app/src/main/res/layout/fragment_account.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_account.xml
@@ -138,6 +138,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
+            android:visibility="gone"
             app:cardCornerRadius="100dp"
             app:cardElevation="0dp"
             android:elevation="0dp">
