Fix: 친구 목록 화면에서 뒤로가기 버튼 클릭 시 홈 화면으로 이동하기 #36

--- a/Oops-Android/app/src/main/res/navigation/nav_graph.xml
+++ b/Oops-Android/app/src/main/res/navigation/nav_graph.xml
@@ -200,6 +200,11 @@
         <action
             android:id="@+id/action_friendsFrm_to_searchFriendsFrm"
             app:destination="@id/searchFriendsFragment"/>
+        <action
+            android:id="@+id/action_friendsFrm_to_homeFrm"
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToInclusive="true"/>
     </fragment>
 
     <!-- 사용자 검색 창 -->
