Style: 안드로이드에서 글자 크기를 키웠을 경우, 일부 텍스트는 고정 크기로 설정
- 가독성을 위함
- 중요한 정보는 글자 크기가 커질 수 있도록 sp로 설정

--- a/Oops-Android/app/src/main/res/layout/activity_login.xml
+++ b/Oops-Android/app/src/main/res/layout/activity_login.xml
@@ -45,7 +45,7 @@
                 android:maxLines="1"
                 android:hint="@string/login_email"
                 android:textColorHint="@color/Gray_300"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/Main_500"
                 android:fontFamily="@font/pretendard_medium"
                 android:inputType="textEmailAddress"
@@ -61,7 +61,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/login_email_alert"
-                android:textSize="12sp"
+                android:textSize="12dp"
                 android:textColor="@color/Red_Dark"
                 android:fontFamily="@font/pretendard_regular"
                 android:visibility="gone"
@@ -89,7 +89,7 @@
                     android:maxLines="1"
                     android:hint="@string/login_pwd"
                     android:textColorHint="@color/Gray_300"
-                    android:textSize="14sp"
+                    android:textSize="14dp"
                     android:textColor="@color/Main_500"
                     android:fontFamily="@font/pretendard_medium"
                     android:inputType="textPassword"
@@ -115,7 +115,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/login_pwd_alert"
-                android:textSize="12sp"
+                android:textSize="12dp"
                 android:textColor="@color/Red_Dark"
                 android:fontFamily="@font/pretendard_regular"
                 android:visibility="gone"
@@ -131,7 +131,7 @@
             android:background="@drawable/login_box_bg"
             android:backgroundTint="@color/Gray_100"
             android:text="@string/login_login"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:fontFamily="@font/pretendard_semibold"
             android:textColor="@color/Gray_400"
             android:paddingTop="12dp"
@@ -151,7 +151,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/login_find"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/Gray_300"
                 android:fontFamily="@font/pretendard_regular"
                 android:layout_marginEnd="24dp"/>
@@ -162,7 +162,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/login_signup"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/Gray_300"
                 android:fontFamily="@font/pretendard_regular"/>
         </LinearLayout>
@@ -193,7 +193,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/login_info"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/Gray_400"
                 android:fontFamily="@font/pretendard_medium"
                 android:layout_marginStart="12dp"
@@ -290,7 +290,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/login_recent"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="#111827"
                 android:fontFamily="@font/pretendard_medium"
                 android:background="@drawable/all_radius_50"
@@ -336,7 +336,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/login_recent"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="#111827"
                 android:fontFamily="@font/pretendard_medium"
                 android:background="@drawable/all_radius_50"
