--- a/Oops-Android/app/src/main/res/layout/activity_sign_up.xml
+++ b/Oops-Android/app/src/main/res/layout/activity_sign_up.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:text="@string/signup_info_1"
         android:fontFamily="@font/pretendard_bold"
-        android:textSize="32sp"
+        android:textSize="32dp"
         android:textColor="@color/Black"
         android:lineSpacingExtra="146.3sp"
         android:layout_marginTop="126dp"
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:text="@string/signup_info_2"
         android:fontFamily="@font/pretendard_bold"
-        android:textSize="32sp"
+        android:textSize="32dp"
         android:textColor="@color/Black"
         android:lineSpacingExtra="146.3sp"
         app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_intro_1"/>
@@ -58,7 +58,7 @@
                 android:maxLines="1"
                 android:hint="@string/signup_nickname"
                 android:textColorHint="@color/Gray_300"
-                android:textSize="18sp"
+                android:textSize="18dp"
                 android:textColor="@color/Black"
                 android:fontFamily="@font/pretendard_regular"
                 android:imeOptions="actionDone"
@@ -88,7 +88,7 @@
                 android:backgroundTint="@color/Gray_200"
                 android:text="@string/btn_overlap"
                 android:textColor="@color/Gray_400"
-                android:textSize="12sp"
+                android:textSize="12dp"
                 android:fontFamily="@font/pretendard_bold"
                 android:paddingStart="7dp"
                 android:paddingTop="9dp"
@@ -114,7 +114,7 @@
             android:id="@+id/tv_sign_up_alert"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:textColor="@color/Gray_300"
             android:fontFamily="@font/pretendard_regular"
             android:layout_marginTop="8dp"/>
