--- a/Oops-Android/app/src/main/res/layout/fragment_sting.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_sting.xml
@@ -34,7 +34,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/bnv_menu_3"
-        android:textSize="30sp"
+        android:textSize="30dp"
         android:textColor="@color/Black"
         android:fontFamily="@font/pretendard_bold"
         android:gravity="center"
@@ -48,7 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/sting_sub"
-        android:textSize="16sp"
+        android:textSize="16dp"
         android:textColor="@color/Gray_400"
         android:fontFamily="@font/pretendard_bold"
         android:gravity="center"
@@ -454,7 +454,7 @@
         android:text="@string/sting_friends"
         android:textColor="@color/White"
         android:fontFamily="@font/pretendard_bold"
-        android:textSize="20sp"
+        android:textSize="20dp"
         android:paddingStart="43dp"
         android:paddingEnd="43dp"
         android:paddingTop="16dp"
