--- a/Oops-Android/app/src/main/res/layout/item_friends_box_rv_2.xml
+++ b/Oops-Android/app/src/main/res/layout/item_friends_box_rv_2.xml
@@ -35,7 +35,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="@color/Black"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:fontFamily="@font/pretendard_bold"
         android:ems="6"
         android:maxLines="1"
@@ -54,7 +54,7 @@
         android:layout_height="wrap_content"
         android:text="@string/friend_delete"
         android:textColor="@color/Gray_500"
-        android:textSize="12sp"
+        android:textSize="12dp"
         android:fontFamily="@font/pretendard_regular"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="12dp"
