--- a/Oops-Android/app/src/main/res/layout/activity_sign_up2.xml
+++ b/Oops-Android/app/src/main/res/layout/activity_sign_up2.xml
@@ -41,7 +41,7 @@
                         android:layout_height="wrap_content"
                         app:layout_constraintWidth_max="292dp"
                         android:fontFamily="@font/pretendard_bold"
-                        android:textSize="32sp"
+                        android:textSize="32dp"
                         android:textColor="@color/Main_500"
                         android:maxLines="1"
                         android:ellipsize="end"
@@ -55,7 +55,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/signup_info_3"
                         android:fontFamily="@font/pretendard_bold"
-                        android:textSize="32sp"
+                        android:textSize="32dp"
                         android:textColor="@color/Black"
                         app:layout_constraintVertical_bias="1"
                         app:layout_constraintTop_toTopOf="@id/tv_sign_up_2_nickname"
@@ -99,7 +99,7 @@
                         android:maxLines="1"
                         android:hint="@string/signup_email"
                         android:textColorHint="@color/Gray_300"
-                        android:textSize="18sp"
+                        android:textSize="18dp"
                         android:textColor="@color/Black"
                         android:fontFamily="@font/pretendard_regular"
                         android:background="@null"
@@ -129,7 +129,7 @@
                         android:backgroundTint="@color/Gray_200"
                         android:text="@string/btn_overlap"
                         android:textColor="@color/Gray_400"
-                        android:textSize="12sp"
+                        android:textSize="12dp"
                         android:fontFamily="@font/pretendard_bold"
                         android:paddingTop="9dp"
                         android:paddingStart="7dp"
@@ -155,7 +155,7 @@
                     android:id="@+id/tv_sign_up_2_email_alert"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textColor="@color/Red_Medium"
                     android:fontFamily="@font/pretendard_regular"
                     android:visibility="gone"
@@ -176,7 +176,7 @@
                         android:maxLength="24"
                         android:hint="@string/signup_pwd"
                         android:textColorHint="@color/Gray_300"
-                        android:textSize="18sp"
+                        android:textSize="18dp"
                         android:textColor="@color/Black"
                         android:fontFamily="@font/pretendard_regular"
                         android:background="@null"
@@ -222,7 +222,7 @@
                     android:id="@+id/tv_sign_up_2_pwd_alert"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textColor="@color/Red_Medium"
                     android:fontFamily="@font/pretendard_regular"
                     android:visibility="gone"
@@ -243,7 +243,7 @@
                         android:maxLength="24"
                         android:hint="@string/signup_pwd_check"
                         android:textColorHint="@color/Gray_300"
-                        android:textSize="18sp"
+                        android:textSize="18dp"
                         android:textColor="@color/Black"
                         android:fontFamily="@font/pretendard_regular"
                         android:background="@null"
@@ -278,7 +278,7 @@
                     android:id="@+id/tv_sign_up_2_pwd_check_alert"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textColor="@color/Red_Medium"
                     android:fontFamily="@font/pretendard_regular"
                     android:visibility="gone"
