--- a/Oops-Android/app/src/main/res/layout/fragment_account.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_account.xml
@@ -44,7 +44,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="end"
-                android:textSize="15sp"
+                android:textSize="15dp"
                 android:textColor="@color/Gray_400"
                 android:fontFamily="@font/pretendard_semibold"/>
         </LinearLayout>
@@ -70,7 +70,7 @@
                 android:gravity="end"
                 android:maxLines="1"
                 android:ellipsize="end"
-                android:textSize="15sp"
+                android:textSize="15dp"
                 android:textColor="@color/Gray_400"
                 android:fontFamily="@font/pretendard_semibold"/>
         </LinearLayout>
