--- a/Oops-Android/app/src/main/res/layout/fragment_todo.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_todo.xml
@@ -230,7 +230,7 @@
                     android:outlineProvider="none"
                     android:text="@string/todo_tag_1"
                     android:textColor="@color/Gray_400"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
                 <CheckBox
                     android:id="@+id/cb_tag_job"
                     android:layout_width="0dp"
@@ -244,7 +244,7 @@
                     android:outlineProvider="none"
                     android:text="@string/todo_tag_2"
                     android:textColor="@color/Gray_400"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
                 <CheckBox
                     android:id="@+id/cb_tag_hobby"
                     android:layout_width="0dp"
@@ -258,7 +258,7 @@
                     android:outlineProvider="none"
                     android:text="@string/todo_tag_3"
                     android:textColor="@color/Gray_400"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
                 <CheckBox
                     android:id="@+id/cb_tag_study"
                     android:layout_width="0dp"
@@ -272,7 +272,7 @@
                     android:outlineProvider="none"
                     android:text="@string/todo_tag_4"
                     android:textColor="@color/Gray_400"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
                 <CheckBox
                     android:id="@+id/cb_tag_sports"
                     android:layout_width="0dp"
@@ -286,7 +286,7 @@
                     android:outlineProvider="none"
                     android:text="@string/todo_tag_5"
                     android:textColor="@color/Gray_400"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
                 <CheckBox
                     android:id="@+id/cb_tag_reading"
                     android:layout_width="0dp"
@@ -300,7 +300,7 @@
                     android:outlineProvider="none"
                     android:text="@string/todo_tag_6"
                     android:textColor="@color/Gray_400"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
                 <CheckBox
                     android:id="@+id/cb_tag_travel"
                     android:layout_width="0dp"
@@ -314,7 +314,7 @@
                     android:outlineProvider="none"
                     android:text="@string/todo_tag_7"
                     android:textColor="@color/Gray_400"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
                 <CheckBox
                     android:id="@+id/cb_tag_shopping"
                     android:layout_width="0dp"
@@ -328,7 +328,7 @@
                     android:outlineProvider="none"
                     android:text="@string/todo_tag_8"
                     android:textColor="@color/Gray_400"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
             </GridLayout>
 
             <!-- 외출 시간 -->
@@ -409,7 +409,7 @@
                     android:outlineProvider="none"
                     android:text="@string/todo_remind_1"
                     android:textColor="@color/Gray_400"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
                 <CheckBox
                     android:id="@+id/cb_remind_5m"
                     android:layout_width="0dp"
@@ -423,7 +423,7 @@
                     android:outlineProvider="none"
                     android:text="@string/todo_remind_2"
                     android:textColor="@color/Gray_400"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
                 <CheckBox
                     android:id="@+id/cb_remind_30m"
                     android:layout_width="0dp"
@@ -437,7 +437,7 @@
                     android:outlineProvider="none"
                     android:text="@string/todo_remind_3"
                     android:textColor="@color/Gray_400"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
                 <CheckBox
                     android:id="@+id/cb_remind_1h"
                     android:layout_width="0dp"
@@ -451,7 +451,7 @@
                     android:outlineProvider="none"
                     android:text="@string/todo_remind_4"
                     android:textColor="@color/Gray_400"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
                 <CheckBox
                     android:id="@+id/cb_remind_1d"
                     android:layout_width="0dp"
@@ -465,7 +465,7 @@
                     android:outlineProvider="none"
                     android:text="@string/todo_remind_5"
                     android:textColor="@color/Gray_400"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
             </GridLayout>
 
             <!-- 등록하기 버튼 -->
