--- a/Oops-Android/app/src/main/res/layout/fragment_withdrawal2.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_withdrawal2.xml
@@ -83,7 +83,7 @@
             android:button="@drawable/selector_withdrawal_checkbox"
             android:text="@string/withdrawal_info_7"
             android:textColor="@color/Black"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:fontFamily="@font/pretendard_medium"
             android:paddingStart="8dp"/>
 
@@ -94,7 +94,7 @@
             android:button="@drawable/selector_withdrawal_checkbox"
             android:text="@string/withdrawal_info_8"
             android:textColor="@color/Black"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:fontFamily="@font/pretendard_medium"
             android:paddingStart="8dp"
             android:layout_marginTop="24dp"/>
