--- a/Oops-Android/app/src/main/res/layout/item_home_todo_tag.xml
+++ b/Oops-Android/app/src/main/res/layout/item_home_todo_tag.xml
@@ -16,7 +16,7 @@
         android:id="@+id/tv_home_todo_tag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="12sp"
+        android:textSize="12dp"
         android:textColor="@color/Main_500"
         android:fontFamily="@font/pretendard_regular"/>
 </LinearLayout>
