--- a/Oops-Android/app/src/main/res/layout/toolbar_sub.xml
+++ b/Oops-Android/app/src/main/res/layout/toolbar_sub.xml
@@ -31,7 +31,7 @@
             android:id="@+id/tv_sub_toolbar_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="24sp"
+            android:textSize="24dp"
             android:textColor="@color/Black"
             android:layout_gravity="center"
             android:fontFamily="@font/pretendard_bold"
