--- a/Oops-Android/app/src/main/res/values-night/themes.xml
+++ b/Oops-Android/app/src/main/res/values-night/themes.xml
@@ -39,31 +39,31 @@
     <!-- 월간 캘린더 텍스트 스타일 -->
     <style name="CalendarViewCustom">
         <item name="android:textColor">@drawable/selector_monthly_calendar_event_text</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">14dp</item>
         <item name="android:fontFamily">@font/pretendard_bold</item>
     </style>
     <!-- 요일(일주일) -->
     <style name="WeekTextStyle">
         <item name="android:textColor">@color/Black_70</item>
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">12dp</item>
         <item name="android:fontFamily">@font/pretendard_bold</item>
     </style>
     <!-- 요일(월간) -->
     <style name="WeekTextStyle2">
         <item name="android:textColor">@color/Black_70</item>
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">12dp</item>
         <item name="android:fontFamily">@font/pretendard_regular</item>
     </style>
     <!-- 날짜 -->
     <style name="DateTextStyle">
         <item name="android:textColor">#333333</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">14dp</item>
         <item name="android:fontFamily">@font/pretendard_bold</item>
     </style>
     <!-- Enable Wide 버튼 스타일 -->
     <style name="WideButtonEnableStyle">
         <item name="android:textColor">@color/White</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">20dp</item>
         <item name="android:fontFamily">@font/pretendard_bold</item>
         <item name="android:gravity">center</item>
         <item name="android:minWidth">0dp</item>
@@ -76,7 +76,7 @@
     <!-- Disable Wide 버튼 스타일 -->
     <style name="WideButtonDisableStyle">
         <item name="android:textColor">@color/Gray_400</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">20dp</item>
         <item name="android:fontFamily">@font/pretendard_bold</item>
         <item name="android:gravity">center</item>
         <item name="android:minWidth">0dp</item>
@@ -89,7 +89,7 @@
     <!-- Enable 팝업 버튼 스타일 -->
     <style name="PopUpButtonEnableStyle">
         <item name="android:textColor">@color/White</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">14dp</item>
         <item name="android:fontFamily">@font/pretendard_bold</item>
         <item name="android:gravity">center</item>
         <item name="android:background">@drawable/popup_btn_bg</item>
@@ -98,7 +98,7 @@
     <!-- 취소 팝업 버튼 스타일 -->
     <style name="PopUpButtonCancelStyle">
         <item name="android:textColor">@color/Gray_500</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">14dp</item>
         <item name="android:fontFamily">@font/pretendard_bold</item>
         <item name="android:gravity">center</item>
         <item name="android:background">@drawable/popup_btn_bg</item>
@@ -108,7 +108,7 @@
     <!-- Disable 팝업 버튼 스타일 -->
     <style name="PopUpButtonDisableStyle">
         <item name="android:textColor">@color/White</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">14dp</item>
         <item name="android:fontFamily">@font/pretendard_bold</item>
         <item name="android:gravity">center</item>
         <item name="android:background">@drawable/popup_btn_bg</item>
@@ -129,6 +129,6 @@
         <item name="android:fontFamily">@font/pretendard_medium</item>
         <item name="android:textColorPrimary">@color/Gray_900</item>
         <item name="colorControlNormal">@color/transparent</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">16dp</item>
     </style>
 </resources>
