--- a/Oops-Android/app/src/main/res/layout/dialog_push_alert_disable.xml
+++ b/Oops-Android/app/src/main/res/layout/dialog_push_alert_disable.xml
@@ -15,7 +15,7 @@
         android:gravity="center"/>
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="296dp"
         android:layout_height="wrap_content"
         android:text="@string/popup_push_alert_disable_info"
         style="@style/dialog_content"
@@ -31,7 +31,7 @@
         <Button
             android:id="@+id/popup_push_alert_disable_cancel"
             android:layout_width="0dp"
-            android:layout_height="33dp"
+            android:layout_height="40dp"
             style="@style/PopUpButtonCancelStyle"
             android:text="@string/popup_cancel"
             android:layout_weight="1"
@@ -39,7 +39,7 @@
         <Button
             android:id="@+id/popup_push_alert_disable"
             android:layout_width="0dp"
-            android:layout_height="33dp"
+            android:layout_height="40dp"
             style="@style/PopUpButtonDisableStyle"
             android:text="@string/popup_disable"
             android:layout_weight="1"/>
